tests/baselines/reference/assignmentCompatWithConstructSignaturesWithOptionalParameters.errors.txt
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(14,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(15,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(16,5): error TS2322: Type 'new (x: number) => number' is not assignable to type 'new () => number'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(16,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(17,5): error TS2322: Type 'new (x: number, y?: number | undefined) => number' is not assignable to type 'new () => number'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(17,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(18,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(19,5): error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new () => number'.
  Target signature provides too few arguments. Expected 2 or more, but got 0.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(19,9): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(22,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(23,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(24,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(25,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(26,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(27,5): error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new (x?: number | undefined) => number'.
  Target signature provides too few arguments. Expected 2 or more, but got 1.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(27,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(30,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(31,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(32,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(33,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(34,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(35,5): error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new (x: number) => number'.
  Target signature provides too few arguments. Expected 2 or more, but got 1.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(35,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(38,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(39,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(40,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(41,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(42,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(43,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(46,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(47,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(48,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(49,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(50,10): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(51,10): error TS2454: Variable 'b' is used before being assigned.


==== assignmentCompatWithConstructSignaturesWithOptionalParameters.ts (35 errors) ====
    // call signatures in derived types must have the same or fewer optional parameters as the base type
    
    interface Base { 
        a: new () => number;
        a2: new (x?: number) => number;
        a3: new (x: number) => number;
        a4: new (x: number, y?: number) => number;
        a5: new (x?: number, y?: number) => number;
        a6: new (x: number, y: number) => number;
    }
    var b: Base;
    
    var a: new () => number;
        a = b.a; // ok
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a = b.a2; // ok
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a = b.a3; // error
        ~
!!! error TS2322: Type 'new (x: number) => number' is not assignable to type 'new () => number'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a = b.a4; // error
        ~
!!! error TS2322: Type 'new (x: number, y?: number | undefined) => number' is not assignable to type 'new () => number'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a = b.a5; // ok
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a = b.a6; // error
        ~
!!! error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new () => number'.
!!! error TS2322:   Target signature provides too few arguments. Expected 2 or more, but got 0.
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    var a2: new (x?: number) => number; 
        a2 = b.a; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a2 = b.a2; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a2 = b.a3; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a2 = b.a4; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a2 = b.a5; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a2 = b.a6; // error
        ~~
!!! error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new (x?: number | undefined) => number'.
!!! error TS2322:   Target signature provides too few arguments. Expected 2 or more, but got 1.
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    var a3: new (x: number) => number; 
        a3 = b.a; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a3 = b.a2; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a3 = b.a3; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a3 = b.a4; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a3 = b.a5; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a3 = b.a6; // error
        ~~
!!! error TS2322: Type 'new (x: number, y: number) => number' is not assignable to type 'new (x: number) => number'.
!!! error TS2322:   Target signature provides too few arguments. Expected 2 or more, but got 1.
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    var a4: new (x: number, y?: number) => number;
        a4 = b.a; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a4 = b.a2; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a4 = b.a3; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a4 = b.a4; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a4 = b.a5; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a4 = b.a6; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    var a5: new (x?: number, y?: number) => number;
        a5 = b.a; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a5 = b.a2; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a5 = b.a3; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a5 = b.a4; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a5 = b.a5; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
        a5 = b.a6; // ok
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
    